--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "build": "webpack-dev-server",
     "test": "karma start karma.conf.js"
   },
-  "author": "Dmitrii Boronin"
+  "author": "Dmitrii Boronin",
+  "devDependencies": {
+    "karma": "^1.3.0"
+  }
 }
