--- a/package.json
+++ b/package.json
@@ -9,6 +9,18 @@
   },
   "author": "Dmitrii Boronin",
   "devDependencies": {
-    "karma": "^1.3.0"
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "chai": "^3.5.0",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jquery": "^0.1.0",
+    "karma-mocha": "^1.2.0",
+    "karma-mocha-reporter": "^2.2.0",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.1.0",
+    "webpack": "^1.13.2"
   }
 }
