--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Dmitrii Boronin",
   "devDependencies": {
     "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "chai": "^3.5.0",
+    "eslint": "^3.7.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-react": "^6.3.0",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.0.0",
